load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")

java_test_suite(
    name = "SmallTests",
    size = "small",
    srcs = glob(["*Test.java"]),
    deps = [
        "//java/src/org/openqa/selenium:core",
        artifact("org.assertj:assertj-core"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
    ] + JUNIT5_DEPS,
)
