load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")

java_test_suite(
    name = "ConstructorCoercerTests",
    size = "small",
    srcs = ["ConstructorCoercerTest.java"],
    javacopts = [
        "-parameters",
    ],
    deps = [
        "//java/src/org/openqa/selenium/json",
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.assertj:assertj-core"),
    ] + JUNIT5_DEPS,
)

java_test_suite(
    name = "SmallTests",
    size = "small",
    srcs = glob(
        ["*.java"],
        exclude = ["ConstructorCoercerTest.java"],
    ),
    javacopts = [
        "-parameters",
    ],
    deps = [
        "//java/src/org/openqa/selenium/json",
        "//java/src/org/openqa/selenium/remote",
        "//java/test/org/openqa/selenium/testing:annotations",
        artifact("com.google.guava:guava"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.assertj:assertj-core"),
        artifact("com.google.code.gson:gson"),
        artifact("org.jspecify:jspecify"),
    ] + JUNIT5_DEPS,
)
