load("//java:defs.bzl", "JUNIT5_DEPS", "artifact", "java_selenium_test_suite", "java_test_suite")

SMALL_TEST_SRCS = [
    "LoggingTest.java",
]

java_test_suite(
    name = "SmallTests",
    size = "small",
    srcs = SMALL_TEST_SRCS,
    deps = [
        "//java/src/org/openqa/selenium/remote",
        artifact("org.assertj:assertj-core"),
        artifact("com.google.guava:guava"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.mockito:mockito-core"),
    ] + JUNIT5_DEPS,
)

java_selenium_test_suite(
    name = "LargeTests",
    size = "large",
    srcs = glob(
        ["*.java"],
        exclude = SMALL_TEST_SRCS,
    ),
    browsers = ["chrome"],
    deps = [
        "//java/src/org/openqa/selenium/remote",
        "//java/test/org/openqa/selenium/testing:annotations",
        "//java/test/org/openqa/selenium/testing:test-base",
        "//java/test/org/openqa/selenium/testing/drivers",
        artifact("org.assertj:assertj-core"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.jspecify:jspecify"),
    ] + JUNIT5_DEPS,
)
