load("//rb/spec:tests.bzl", "rb_integration_test")

[
    rb_integration_test(
        name = file[:-8],
        srcs = [file],
        bidi_only = True,
        tags = ["exclusive-if-local"],
        deps = [
            "//rb/lib/selenium/webdriver:bidi",
        ],
    )
    for file in glob(["*_spec.rb"])
]
